--- a/emission_calculation.ipynb
+++ b/emission_calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,18 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    True\n",
-      "1    True\n",
-      "2    True\n",
-      "3    True\n",
-      "4    True\n",
+      "2429116    True\n",
+      "2429117    True\n",
+      "2409788    True\n",
+      "2429118    True\n",
+      "2429119    True\n",
       "Name: is_ogv, dtype: bool\n"
      ]
     }
@@ -204,22 +204,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 4: Determine Emissions Tier**"
+    "**Step 3.5: Clean Data**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2822594    3\n",
-       "2822595    3\n",
-       "2822596    2\n",
-       "2822597    2\n",
-       "2822598    1\n",
+       "1926735"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# as seen, there are 2684 with the default value 0\n",
+    "\n",
+    "#upon further insepction, the values fall under one of the 4 catagories\n",
+    "# Speed 0.0, nav_stat = 5 (Moored (tied to another object to limit free movement)), but maneuvering_zone = 'PPT Maneouvering Zone'     2323\n",
+    "# Speed 0.0, nav_stat = 1 (Anchored), but maneuvering_zone = 'PPT Maneouvering Zone'      218\n",
+    "# Speed 0.0, nav_stat = 15 (Undefined (default)), but maneuvering_zone = 'PPT Maneouvering Zone'     130\n",
+    "# Speed 0.0, nav_stat = 2 (Not under command), but maneuvering_zone = 'PPT Maneouvering Zone'       13\n",
+    "\n",
+    "vessel_df = vessel_df[vessel_df['operating_mode'] != 0]\n",
+    "\n",
+    "len(vessel_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 4: Determine Emissions Tier**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2679458    3\n",
+       "2687878    3\n",
+       "2687877    3\n",
+       "2687876    3\n",
+       "2679457    3\n",
        "Name: emission_tier, dtype: int64"
       ]
      },
