--- a/emission_calculation.ipynb
+++ b/emission_calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,24 +21,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>imo</th>\n",
+       "      <th>mmsi</th>\n",
+       "      <th>vessel_id</th>\n",
+       "      <th>vessel_name</th>\n",
+       "      <th>date_of_build</th>\n",
+       "      <th>vessel_type</th>\n",
+       "      <th>group</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>date_only</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>...</th>\n",
+       "      <th>anchorage</th>\n",
+       "      <th>terminal</th>\n",
+       "      <th>maneuvering_zone</th>\n",
+       "      <th>p</th>\n",
+       "      <th>vref</th>\n",
+       "      <th>sfc_me</th>\n",
+       "      <th>sfc_ae</th>\n",
+       "      <th>sfc_ab</th>\n",
+       "      <th>ael</th>\n",
+       "      <th>abl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9223253</td>\n",
+       "      <td>525119038</td>\n",
+       "      <td>692017</td>\n",
+       "      <td>PRIMA TANGGUH LVI</td>\n",
+       "      <td>2002-04-01</td>\n",
+       "      <td>Crude/Oil Products Tanker</td>\n",
+       "      <td>Crude &amp; Products Tanker</td>\n",
+       "      <td>2023-09-17T00:01:42.000Z</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>103.826065</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PPT Anchorage</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7860.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9223253</td>\n",
+       "      <td>525119038</td>\n",
+       "      <td>692017</td>\n",
+       "      <td>PRIMA TANGGUH LVI</td>\n",
+       "      <td>2002-04-01</td>\n",
+       "      <td>Crude/Oil Products Tanker</td>\n",
+       "      <td>Crude &amp; Products Tanker</td>\n",
+       "      <td>2023-09-17T00:01:44.000Z</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>103.826065</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PPT Anchorage</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7860.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9223253</td>\n",
+       "      <td>525119038</td>\n",
+       "      <td>692017</td>\n",
+       "      <td>PRIMA TANGGUH LVI</td>\n",
+       "      <td>2002-04-01</td>\n",
+       "      <td>Crude/Oil Products Tanker</td>\n",
+       "      <td>Crude &amp; Products Tanker</td>\n",
+       "      <td>2023-09-17T00:07:43.000Z</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>103.825690</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PPT Anchorage</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7860.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9223253</td>\n",
+       "      <td>525119038</td>\n",
+       "      <td>692017</td>\n",
+       "      <td>PRIMA TANGGUH LVI</td>\n",
+       "      <td>2002-04-01</td>\n",
+       "      <td>Crude/Oil Products Tanker</td>\n",
+       "      <td>Crude &amp; Products Tanker</td>\n",
+       "      <td>2023-09-17T00:07:45.000Z</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>103.825690</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PPT Anchorage</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7860.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9223253</td>\n",
+       "      <td>525119038</td>\n",
+       "      <td>692017</td>\n",
+       "      <td>PRIMA TANGGUH LVI</td>\n",
+       "      <td>2002-04-01</td>\n",
+       "      <td>Crude/Oil Products Tanker</td>\n",
+       "      <td>Crude &amp; Products Tanker</td>\n",
+       "      <td>2023-09-17T00:10:42.000Z</td>\n",
+       "      <td>2023-09-17</td>\n",
+       "      <td>103.825580</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PPT Anchorage</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7860.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>507.0</td>\n",
+       "      <td>365.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 32 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2822499    Container Ship\n",
-       "2822500    Container Ship\n",
-       "2822501    Container Ship\n",
-       "2822502    Container Ship\n",
-       "2822503    Container Ship\n",
-       "                ...      \n",
-       "2822594    Container Ship\n",
-       "2822595    Container Ship\n",
-       "2822596    Container Ship\n",
-       "2822597    Container Ship\n",
-       "2822598    Container Ship\n",
-       "Name: group, Length: 100, dtype: object"
+       "       imo       mmsi  vessel_id        vessel_name date_of_build  \\\n",
+       "0  9223253  525119038     692017  PRIMA TANGGUH LVI    2002-04-01   \n",
+       "1  9223253  525119038     692017  PRIMA TANGGUH LVI    2002-04-01   \n",
+       "2  9223253  525119038     692017  PRIMA TANGGUH LVI    2002-04-01   \n",
+       "3  9223253  525119038     692017  PRIMA TANGGUH LVI    2002-04-01   \n",
+       "4  9223253  525119038     692017  PRIMA TANGGUH LVI    2002-04-01   \n",
+       "\n",
+       "                 vessel_type                    group  \\\n",
+       "0  Crude/Oil Products Tanker  Crude & Products Tanker   \n",
+       "1  Crude/Oil Products Tanker  Crude & Products Tanker   \n",
+       "2  Crude/Oil Products Tanker  Crude & Products Tanker   \n",
+       "3  Crude/Oil Products Tanker  Crude & Products Tanker   \n",
+       "4  Crude/Oil Products Tanker  Crude & Products Tanker   \n",
+       "\n",
+       "                  timestamp   date_only         lon  ...      anchorage  \\\n",
+       "0  2023-09-17T00:01:42.000Z  2023-09-17  103.826065  ...  PPT Anchorage   \n",
+       "1  2023-09-17T00:01:44.000Z  2023-09-17  103.826065  ...  PPT Anchorage   \n",
+       "2  2023-09-17T00:07:43.000Z  2023-09-17  103.825690  ...  PPT Anchorage   \n",
+       "3  2023-09-17T00:07:45.000Z  2023-09-17  103.825690  ...  PPT Anchorage   \n",
+       "4  2023-09-17T00:10:42.000Z  2023-09-17  103.825580  ...  PPT Anchorage   \n",
+       "\n",
+       "   terminal  maneuvering_zone       p  vref  sfc_me sfc_ae sfc_ab    ael  \\\n",
+       "0       NaN               NaN  7860.0  14.5   185.0  230.0  300.0  507.0   \n",
+       "1       NaN               NaN  7860.0  14.5   185.0  230.0  300.0  507.0   \n",
+       "2       NaN               NaN  7860.0  14.5   185.0  230.0  300.0  507.0   \n",
+       "3       NaN               NaN  7860.0  14.5   185.0  230.0  300.0  507.0   \n",
+       "4       NaN               NaN  7860.0  14.5   185.0  230.0  300.0  507.0   \n",
+       "\n",
+       "     abl  \n",
+       "0  365.0  \n",
+       "1  365.0  \n",
+       "2  365.0  \n",
+       "3  365.0  \n",
+       "4  365.0  \n",
+       "\n",
+       "[5 rows x 32 columns]"
       ]
      },
      "metadata": {},
@@ -46,10 +238,10 @@
     }
    ],
    "source": [
-    "file_path = \"/Users/evanyan13/2024/RightShip/vessel_movements/vessel_movements_PPT.csv\"\n",
+    "file_path = \"~/2024/RightShip/vessel_movements/vessel_movements_PPT.csv\"\n",
     "\n",
     "vessel_df = pd.read_csv(file_path)\n",
-    "display(vessel_df[\"group\"].tail(100))"
+    "display(vessel_df.head())"
    ]
   },
   {
@@ -61,15 +253,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Change speed null to 0\n",
     "vessel_df['speed'] = vessel_df['speed'].fillna(0.0)\n",
     "\n",
     "# remove 120273 data that is NA for \"anchorage\",\"berth\", \"maneuvering_zone\"\n",
-    "vessel_df = vessel_df[~vessel_df.loc[:, [\"anchorage\",\"berth\", \"maneuvering_zone\"]].isna().all(1)]"
+    "vessel_df = vessel_df[~vessel_df.loc[:, [\"anchorage\",\"berth\", \"maneuvering_zone\"]].isna().all(1)]\n",
+    "\n",
+    "print(vessel_df[[\"anchorage\", \"berth\", \"maneuvering_zone\"]].isna().all(axis=1).sum() == 0)"
    ]
   },
   {
@@ -82,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -117,38 +319,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vessel_df = vessel_df.sort_values(['imo', 'timestamp'], ascending=[True, True]) \n",
+    "\n",
+    "vessel_df = vessel_df.head(1000)\n",
+    "\n",
+    "vessel_df.to_excel('vessel_data.xlsx', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 2: Log events at each timestamp**"
+    "**Step 2: Log events at each timestamp**\n",
+    "\n",
+    "The event duration is the difference between two consecutive timestamps for each vessel i.e. same IMO number. \n",
+    "\n",
+    "Note: If the difference between two AIS time stamps is more than 10,000 seconds, then the event is not continuous and should not undergo calculation for this greater than 24-hour period. Thereafter it should start afresh."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2663186      NaN\n",
-      "2663185     41.0\n",
-      "2658468    267.0\n",
-      "2658467     32.0\n",
-      "2658466    268.0\n",
-      "Name: event_duration_sec, dtype: float64\n"
+      "False\n"
      ]
     }
    ],
    "source": [
     "vessel_df = vessel_df.sort_values(['imo', 'timestamp'], ascending=[True, True]) \n",
     " \n",
-    "vessel_df['lag_time'] = vessel_df.groupby(['imo'])['timestamp'].shift(1) \n",
-    "vessel_df['event_duration'] = (pd.to_datetime(vessel_df['timestamp']) - pd.to_datetime(vessel_df['lag_time'])) \n",
-    "vessel_df['event_duration_sec'] = vessel_df['event_duration'].dt.total_seconds() \n",
+    "vessel_df['previous_timestamp'] = vessel_df.groupby(['imo'])['timestamp'].shift(1) \n",
+    "vessel_df['event_duration'] = (pd.to_datetime(vessel_df['timestamp']) - pd.to_datetime(vessel_df['previous_timestamp'])) \n",
+    "vessel_df['event_duration_sec'] = vessel_df['event_duration'].dt.total_seconds()\n",
+    "vessel_df.loc[vessel_df['event_duration_sec'] > 10000, 'event_duration_sec'] = 0\n",
     "\n",
-    "print(vessel_df['event_duration_sec'].head())"
+    "print((vessel_df['event_duration_sec'] > 10000).any())"
    ]
   },
   {
@@ -160,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -474,6 +689,39 @@
     "Hence, for the purpose of this scope the Auxiliary engine load (column ael) in alongside mode will be used to identify the electrical load demand of the ships.\n",
     "<br></br>\n",
     "Total electrical demand from ship in alongside mode (Tael) = time-weighted average electrical load (ael) in alongside mode = (Sum of Product of Ael multiplied by alongside duration hours) divide by (Sum of total alongside duration in hours)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "False",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: False",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m alongside_event \u001b[38;5;241m=\u001b[39m vessel_df[vessel_df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moperating_mode\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m]]\n\u001b[1;32m      3\u001b[0m display(alongside_event)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3760\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3761\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   3762\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3763\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3655\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3657\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3658\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3659\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3660\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: False"
+     ]
+    }
+   ],
+   "source": [
+    "alongside_event = vessel_df[vessel_df[\"operating_mode\" == 4]]\n",
+    "\n",
+    "display(alongside_event)"
    ]
   },
   {
