--- a/emission_calculation.ipynb
+++ b/emission_calculation.ipynb
@@ -897,121 +897,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ael*duration</th>\n",
-       "      <th>event_duration_sec</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>imo</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>8413409</th>\n",
-       "      <td>63685692.0</td>\n",
-       "      <td>144412.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8420907</th>\n",
-       "      <td>473381935.0</td>\n",
-       "      <td>526924.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8813659</th>\n",
-       "      <td>47816314.0</td>\n",
-       "      <td>60298.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9046423</th>\n",
-       "      <td>94000072.0</td>\n",
-       "      <td>118388.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9054963</th>\n",
-       "      <td>14897286.0</td>\n",
-       "      <td>32598.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9967483</th>\n",
-       "      <td>14167076.0</td>\n",
-       "      <td>13142.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9970428</th>\n",
-       "      <td>651021987.0</td>\n",
-       "      <td>768624.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9970430</th>\n",
-       "      <td>116664086.0</td>\n",
-       "      <td>137738.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9970442</th>\n",
-       "      <td>618344727.0</td>\n",
-       "      <td>730041.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9970454</th>\n",
-       "      <td>439511688.0</td>\n",
-       "      <td>519267.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1255 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         ael*duration  event_duration_sec\n",
-       "imo                                      \n",
-       "8413409    63685692.0            144412.0\n",
-       "8420907   473381935.0            526924.0\n",
-       "8813659    47816314.0             60298.0\n",
-       "9046423    94000072.0            118388.0\n",
-       "9054963    14897286.0             32598.0\n",
-       "...               ...                 ...\n",
-       "9967483    14167076.0             13142.0\n",
-       "9970428   651021987.0            768624.0\n",
-       "9970430   116664086.0            137738.0\n",
-       "9970442   618344727.0            730041.0\n",
-       "9970454   439511688.0            519267.0\n",
-       "\n",
-       "[1255 rows x 2 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -1120,10 +1008,6 @@
     }
    ],
    "source": [
-    "# # Filter all operation mode that are alongside\n",
-    "# alongside_df = vessel_df[vessel_df['operating_mode'] == 4].copy()\n",
-    "# alongside_df['ael'] = alongside_df['ael'].fillna(0.0)\n",
-    "\n",
     "# Change ael null to 0\n",
     "vessel_df['ael'] = vessel_df['ael'].fillna(0.0)\n",
     "\n",
@@ -1153,16 +1037,15 @@
     "alongside['ael*duration'] = alongside['ael'] * alongside['event_duration_sec']\n",
     "\n",
     "# Group by 'imo' and calculate the sum for both 'ael_duration' and 'event_duration_sec'\n",
-    "grouped = alongside.groupby('imo')[['ael*duration', 'event_duration_sec']].sum()\n",
-    "display(grouped)\n",
+    "# columns = [\"imo\", 'timestamp', \"ael*duration\", \"event_duration_sec\"]\n",
+    "grouped = alongside.groupby('imo').sum()\n",
     "\n",
     "# Calculate the ratio\n",
     "grouped['Tael'] = grouped['ael*duration'] / grouped['event_duration_sec']\n",
     "\n",
     "# Reset index to convert 'imo' back to a column\n",
     "output = grouped.reset_index()[['imo', 'Tael']]\n",
-    "\n",
-    "display(output)\n"
+    "display(output)"
    ]
   },
   {
@@ -1182,9 +1065,39 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "operating_mode\n",
+       "Night    566965\n",
+       "Day      230736\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Operation4 = vessel_df[vessel_df['operating_mode'] == 4].copy()\n",
+    "Operation4['hour'] = pd.to_datetime(Operation4['timestamp']).apply(lambda x: int(x.hour) )\n",
+    "Operation4['min'] = pd.to_datetime(Operation4['timestamp']).apply(lambda x: int(x.minute) )\n",
+    "\n",
+    "conditions = [\n",
+    "    ( ((Operation4['hour'] > 9) & (Operation4['hour'] < 17)) | ((Operation4['hour'] == 9) & (Operation4['min'] == 0)) ),\n",
+    "]\n",
+    "\n",
+    "# Define the corresponding values for each condition\n",
+    "values = [\"Day\"]\n",
+    "\n",
+    "# Create the new column using numpy.select\n",
+    "Operation4['operating_mode'] = np.select(conditions, values, default=\"Night\")\n",
+    "display(Operation4['operating_mode'].value_counts())"
+   ]
   }
  ],
  "metadata": {
