--- a/emission_calculation.ipynb
+++ b/emission_calculation.ipynb
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1083,21 +1083,28 @@
     }
    ],
    "source": [
-    "Operation4 = vessel_df[vessel_df['operating_mode'] == 4].copy()\n",
-    "Operation4['hour'] = pd.to_datetime(Operation4['timestamp']).apply(lambda x: int(x.hour) )\n",
-    "Operation4['min'] = pd.to_datetime(Operation4['timestamp']).apply(lambda x: int(x.minute) )\n",
+    "day_night = vessel_df[vessel_df['operating_mode'] == 4].copy()\n",
+    "day_night['hour'] = pd.to_datetime(day_night['timestamp']).apply(lambda x: int(x.hour) )\n",
+    "day_night['min'] = pd.to_datetime(day_night['timestamp']).apply(lambda x: int(x.minute) )\n",
     "\n",
     "conditions = [\n",
-    "    ( ((Operation4['hour'] > 9) & (Operation4['hour'] < 17)) | ((Operation4['hour'] == 9) & (Operation4['min'] == 0)) ),\n",
+    "    ( ((day_night['hour'] > 9) & (day_night['hour'] < 17)) | ((day_night['hour'] == 9) & (day_night['min'] == 0)) ),\n",
     "]\n",
     "\n",
     "# Define the corresponding values for each condition\n",
     "values = [\"Day\"]\n",
     "\n",
     "# Create the new column using numpy.select\n",
-    "Operation4['operating_mode'] = np.select(conditions, values, default=\"Night\")\n",
-    "display(Operation4['operating_mode'].value_counts())"
+    "day_night['operating_mode'] = np.select(conditions, values, default=\"Night\")\n",
+    "display(day_night['operating_mode'].value_counts())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
